@@ -176,6 +176,27 @@ sub _entrify {
     });
   }
 
+  CHECK_DEFAULT: {
+    if (@emails > 1 and my $default = $fields{default_email}) {
+      my $check;
+      if ($default =~ m{\A/(.+)/\z}) {
+        $default = qr/$1/;
+        $check   = sub { $_[0]->address =~ $default };
+      } else {
+        $check   = sub { $_[0]->label eq $default };
+      }
+
+      for my $i (0 .. $#emails) {
+        if ($check->($emails[$i])) {
+          unshift @emails, splice @emails, $i, 1 if $i != 0;
+          last CHECK_DEFAULT;
+        }
+      }
+
+      warn "no email found for $name matching $fields{default_email}\n";
+    }
+  }
+
   my $arg = {
     name   => $name,
     nick   => $person->{nickname},
